feat: add TLOZ attachment upload API
